--- a/styles/common.css
+++ b/styles/common.css
@@ -1,22 +1,35 @@
-body {
+* {
+	margin: 0;
+	padding: 0;
+}
+
+html {
+	font-family: "Old Standard TT", serif;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 20px;
+
+	color: rgb(27, 38, 49);
+
 	background-image: url("/img/background.png");
+}
+
+body {
+	margin-left: 20%;
+	margin-right: 20%;
+	height: 100%;
+
 	backdrop-filter: blur(10px);
 }
 
-@media (aspect-ratio > 0.8) {
-	body {
-		margin-left: 20%;
-		margin-right: 20%;
-	}
-}
-
 h1 {
-	text-align: center;
+	font-size: 2.5em;
+	font-weight: 700;
 }
 
-.inline-img {
-	display: inline-block;
-	height: 2em;
-	vertical-align: middle;
+a {
+	color: rgb(40, 116, 166);
 }
+
+
 
