Make a layout of content on the page

--- a/styles/common.css
+++ b/styles/common.css
@@ -7,29 +7,21 @@ html {
 	font-family: "Old Standard TT", serif;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 20px;
+	font-size: 23px;
 
 	color: rgb(27, 38, 49);
 
 	background-image: url("/img/background.png");
 }
 
-body {
-	margin-left: 20%;
-	margin-right: 20%;
-	height: 100%;
-
-	backdrop-filter: blur(10px);
-}
-
-h1 {
-	font-size: 2.5em;
-	font-weight: 700;
+p {
+	text-indent: 1.5em;
+	text-align: justify
 }
 
 a {
+	text-decoration: none;
 	color: rgb(40, 116, 166);
 }
-
 
 
