Set a font size to be 14pt

--- a/styles/common.css
+++ b/styles/common.css
@@ -7,7 +7,7 @@ html {
 	font-family: "Old Standard TT", serif;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 20px;
+	font-size: 14pt;
 
 	color: rgb(27, 38, 49);
 
